--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
 }
+
 .topo {
    color: white;
    background-color: black;
@@ -15,6 +16,9 @@ fieldset {
    border: 1px solid gray;
 }
 legend {
+   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+   font-weight: 900;
+   font-size: 18pt;
    margin-left: 20px;
    padding: 5px;
 }
