--- a/style.css
+++ b/style.css
@@ -1,79 +1,114 @@
 * {
-   margin: 0;
-   padding: 0;
-   font-size: 18px;
-   font-family: Arial, Helvetica, sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: var(--body-font);
+}
+html {
+	scroll-behavior: smooth;
+}
+
+:root {
+	--header-height: 4.5rem;
+	--title-font-size: 1.875rem;
+	--subititle-font-size: 1.125rem;
+	--title-font: "Poppins", sans-serif;
+	--body-font: "DM Sans", sans-serif;
+	--color-theme: rgb(76, 107, 202);
 }
 
 .topo {
-   color: white;
-   background-color: black;
-   padding: 10px;
-   padding-left: 50px;
+	color: white;
+	background-color: black;
+	padding: 10px;
+	padding-left: 50px;
+}
+.title {
+	font: var(--title-font-size) var(--title-font);
+}
+.newtrip {
+	padding: 20px;
+	background-color: rgb(195, 192, 192);
 }
 fieldset {
-   border-radius: 10px;
-   border: 1px solid gray;
+	border-radius: 10px;
+	border: none;
+	background-color: white;
+	margin: 20px;
 }
 legend {
-   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-   font-weight: 900;
-   font-size: 18pt;
-   margin-left: 20px;
-   padding: 5px;
+	font-family: var(--title-font);
+	font-weight: 700;
+	font-size: 16pt;
+	margin-left: 20px;
+	padding: 5px 15px;
+	background-color: white;
+	border-radius: 15px;
 }
 .container p,
 input {
-   margin: 2px 0px 10px 20px;
-   display: block;
-   height: 22px;
-   border-radius: 4px;
-   padding: 4px 10px;
+	margin: 2px 0px 10px 20px;
+	display: block;
+	height: 22px;
+	border-radius: 4px;
+	padding: 4px 10px;
+}
+select {
+	background-color: var(--color-theme);
+	color: white;
+	font: var(--title-font) 18pt;
+	font-weight: bold;
+	padding: 5px;
+	border-radius: 20px;
+	text-align: center;
 }
 
 .container {
-   margin: 10px;
-   padding: 10px;
+	margin: 10px;
+	padding: 10px;
 }
 .container .contratante {
-   display: flex;
-   align-items: center;
+	display: flex;
+	align-items: center;
 }
 .container .checkbox {
-   display: flex;
-   align-items: center;
-   margin-left: 20px;
+	display: flex;
+	align-items: center;
+	margin-left: 20px;
 }
 .container .checkbox label {
-   margin: 5px 15px 5px 5px;
+	margin: 5px 15px 5px 5px;
 }
 
 input.button {
-   padding: 5px 8px;
-   border-radius: 10px;
-   border: 1px solid black;
+	padding: 5px 8px;
+	border-radius: 10px;
+	border: 1px solid black;
+}
+.bordertheme {
+	border: 1px solid rgb(173, 173, 173);
 }
 table,
 th,
 td {
-   margin: 5px 0px 20px 20px;
-   border: 1px solid rgb(173, 173, 173);
-   border-radius: 5px;
+	margin: 5px 0px 20px 20px;
+	border: 1px solid rgb(173, 173, 173);
+	border-radius: 5px;
 }
 th {
-   background-color: rgb(56, 57, 60);
-   color: aliceblue;
-   padding: 5px 15px;
-   align-items: center;
+	background-color: var(--color-theme);
+	color: aliceblue;
+	padding: 5px 30px;
+	align-items: center;
 }
 td {
-   text-align: center;
+	text-align: center;
 }
 td input {
-   border: none;
-   margin: 0;
-   padding: 0;
-   display: block;
-   padding-left: 10px;
-   text-align: center;
+	border: none;
+	margin: 0;
+	padding: 0;
+	display: block;
+	padding-left: 10px;
+	text-align: center;
 }
