--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 
 :root {
 	--header-height: 4.5rem;
-	--title-font-size: 1.875rem;
+	--title-font-size: 18pt;
 	--subititle-font-size: 1.125rem;
 	--title-font: "Poppins", sans-serif;
 	--body-font: "DM Sans", sans-serif;
@@ -45,18 +45,27 @@ legend {
 	background-color: white;
 	border-radius: 15px;
 }
+input {
+	height: 25px;
+}
+input.text {
+	width: 25%;
+}
 .container p {
 	height: 22px;
 	margin: 0px 1rem;
 }
 
-div .roteiro {
+div .main {
 	padding: 15px;
 }
 div .flex {
 	display: flex;
 	justify-content: flex-start;
 	margin: 10px 5px;
+}
+.main label {
+	margin-left: 20px;
 }
 
 select {
@@ -70,23 +79,6 @@ select {
 }
 .galeria {
 	width: 600px;
-}
-
-.container {
-	margin: 10px;
-	padding: 10px;
-}
-.container .contratante {
-	display: flex;
-	align-items: center;
-}
-.container .checkbox {
-	display: flex;
-	align-items: center;
-	margin-left: 20px;
-}
-.container .checkbox label {
-	margin: 5px 15px 5px 5px;
 }
 
 input.button {
@@ -122,4 +114,12 @@ td input {
 	display: block;
 	padding-left: 10px;
 	text-align: center;
+}
+th {
+}
+th.sizetext {
+	width: 60%;
+}
+input.sizetext {
+	width: 100%;
 }
